# ndmap

./: .buildinfo  .readthedocs.yml  README.MD  genindex.html  index.html  ndmap.ipynb  ndtorch.ipynb  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/examples/: ndmap.doctree  ndtorch.doctree
.doctrees/modules/: bracket.doctree  complex.doctree  derivative.doctree  evaluate.doctree  factorization.doctree  gradient.doctree  index.doctree  invariant.doctree  inverse.doctree  jet.doctree  matrix.doctree  momenta.doctree  pfp.doctree  propagate.doctree  series.doctree  signature.doctree  taylor.doctree  util.doctree  yoshida.doctree
.github/workflows/: docs.yaml
_modules/: index.html
_modules/ndmap/: evaluate.html  factorization.html  gradient.html  invariant.html  inverse.html  (+9 more)
docs/: requirements.txt
examples/: ndmap.html  ndmap.ipynb  ndtorch.html  ndtorch.ipynb
modules/: bracket.html  complex.html  derivative.html  evaluate.html  factorization.html  gradient.html  index.html  invariant.html  inverse.html  jet.html  matrix.html  momenta.html  pfp.html  propagate.html  series.html  signature.html  taylor.html  util.html  yoshida.html
ndmap/: __init__.py  derivative.py  gradient.py  matrix.py  pfp.py  types.py  util.py  yoshida.py
ndtorch/: bracket.py  derivative.py  evaluate.py  factorization.py  index.py  invariant.py  inverse.py  jet.py  momenta.py  ndtorch.py  pfp.py  propagate.py  series.py  signature.py  taylor.py  twiss.py  util.py  yoshida.py
(+24 files in other folders)
