[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ndmap"
version = "0.1.7"
authors = [{name = "Ivan Morozov"}]
description = "Higher order partial derivatives computation with respect to one or several tensor-like variables, application to nonlinear dynamics"
readme = "README.MD"
requires-python = ">=3.12"
keywords = ["torch", "derivative"]
license = {text = "MIT"}
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["torch>=2.2.0", "multimethod>=1.11", "numpy>=1.26.3"]

[project.optional-dependencies]
examples = ["jupyter-lab", "matplotlib", "twiss"]
test=["pytest", "pytest-cov", "pylint", "mypy", "ruff"]
all = ["ndtorch[examples, test]"]

[tool.ruff.lint]
ignore = [
    "F811"
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

